tests/fixtures/invalid/pow_bool_dict_list.py
# Cannot call pow() with Bool, Dict[str, int], List[int]
x = pow(True, {"a": 1}, [1, 2, 3])
